# android-cbinder-for-linux

./: CMakeLists.txt  Makefile
binderd/: binderd.c
include/: binder_common.h  binder_hal.h  binder_io.h  binder_ipc.h
lib/: binder_io.c
service_manager/: svc_mgr.c
src/: binder_hal.c  binder_ipc.c
test/: fd_client.c  fd_service.c
